# eml_classificator

./: .env.example  .gitignore  PHASE3_IMPLEMENTATION.md  README.md  pyproject.toml  requirements.txt
.github/agents/: multi-step-coding.agent.md
data/: known_customers.txt
doc/: Brainstorming Thread Classificator Mail v2.md  Brainstorming Thread Classificator Mail v3.md
src/eml_classificator/: __init__.py  config.py  logging_config.py  version.py
src/eml_classificator/api/: app.py  middleware.py
src/eml_classificator/api/routes/: __init__.py  candidates.py  classification.py  health.py  ingest.py  pipeline.py  version.py
src/eml_classificator/candidates/: __init__.py  candidate_builder.py  embeddings.py  filters.py  stopwords.py  tokenizer.py
src/eml_classificator/canonicalization/: __init__.py  html_converter.py  text_normalizer.py
src/eml_classificator/classification/: __init__.py  classifier.py  confidence.py  customer_status.py  llm_client.py  priority_scorer.py  prompts.py  schemas.py  tool_definitions.py  validators.py
src/eml_classificator/cli/: __init__.py  classify.py
src/eml_classificator/dictionary/: __init__.py  collision.py  database.py  models.py  observations.py  promoter.py  regex_generator.py  versioning.py
src/eml_classificator/entity_extraction/: __init__.py  entity.py  lexicon_enhancer.py  merger.py  ner_extractor.py  pipeline.py  regex_matcher.py
src/eml_classificator/models/: __init__.py  api_models.py  candidates.py  canonicalization.py  email_document.py  pipeline_version.py
src/eml_classificator/parsing/: __init__.py  eml_parser.py  mime_utils.py
src/eml_classificator/pii/: __init__.py  hash_utils.py  redactor.py
tests/: conftest.py
tests/fixtures/: __init__.py  emails.py
tests/integration/: test_candidates_api.py  test_classification_api.py  test_ingest_api.py  test_ollama_integration.py  test_pipeline_api.py
tests/unit/: test_eml_parser.py  test_html_converter.py  test_pii_redactor.py  test_text_normalizer.py
tests/unit/candidates/: conftest.py  test_candidate_builder.py  test_embeddings.py  test_filters.py  test_models.py  test_tokenizer.py
tests/unit/classification/: test_classifier.py  test_confidence.py  test_customer_status.py  test_llm_client.py  test_priority_scorer.py  test_schemas.py  test_validators.py
tests/unit/dictionary/: __init__.py  test_promoter_collision.py  test_regex_generator.py
tests/unit/entity_extraction/: __init__.py  test_entity_extraction.py
