[tool.poetry]
name = "eml-classificator"
version = "1.0.0"
description = "Deterministic email classification pipeline - Ingestion Layer"
authors = ["Your Team <team@company.com>"]
readme = "README.md"
packages = [{include = "eml_classificator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.9"
structlog = "^24.1.0"
html2text = "^2020.1.16"
charset-normalizer = "^3.3.2"
# Phase 2: Candidate generation dependencies
keybert = "^0.8.5"
sentence-transformers = "^3.0.0"
spacy = "^3.8.0"
numpy = "^1.26.0"
# Phase 3: LLM Classification dependencies
ollama = "^0.3.0"
openai = "^1.12.0"
jsonschema = "^4.21.0"
httpx = "^0.26.0"
# Phase 3: Dictionary database dependencies
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
eml-api = "eml_classificator.api.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/eml_classificator --cov-report=term-missing"
markers = [
    "unit: Unit tests that test individual functions/classes in isolation",
    "integration: Integration tests that test component interactions and APIs",
    "slow: Tests that take significant time to run"
]
